---
config:
  theme: redux
---
classDiagram
direction TB
    class MessagePriority {
        <<enumeration>>
        LOW = 1
        MEDIUM = 2
        HIGH = 3
        CRITICAL = 4
    }

    class LinkType {
        <<enumeration>>
        LAN
        WIFI
        MOBILE
    }

    class SchedulerMode {
        <<enumeration>>
        CONTINUOUS
        INTERVAL
    }
    class LinkQuality {
        <<interface>>
        +LinkType type
        +boolean available
        +number bandwidth
        +number latency
        +number reliability
        +number timestamp
    }

    class SparkAgent {
	    -Logger logger
	    -string agentId
	    -ApiServer apiServer
	    -Receiver receiver
	    -Cache cache
	    -SchedulerBase scheduler
	    -Sender sender
	    -FlowControl flowControl
	    -ConfigurationManager configManager
	    -boolean running
	    +start() Promise~void~
	    +stop() Promise~void~
	    -handleApiMessage(message: Message) void
	    -handleValidMessage(message: Message) void
	    -handleScheduledMessage(message: Message) Promise~void~
	    -handleConfigUpdate(config: Configuration) void
	    -restartScheduler(config: Configuration) void
	    -startLinkMonitoring() void
	    -getStatus() AgentStatus
    }
    class ApiServer {
	    -express app
	    -Logger logger
	    -string token
	    -number port
	    -function onMessage
	    -function getStatus
	    +constructor(port, onMessage, getStatus, token?)
	    +start() Promise~void~
	    -generateToken() string
	    -setupMiddleware() void
	    -setupRoutes() void
    }
    class Receiver {
	    -Logger logger
	    -function onValidMessage
	    +constructor(onValidMessage)
	    +receiveMessage(message: Message) boolean
	    -validateMessage(message: Message) boolean
    }
    class Cache {
	    -Map~MessagePriority, Message[]~ messages
	    -Logger logger
	    +storeMessage(message: Message) void
	    +getNextMessage() Message | null
	    +getQueueSize() number
	    +getQueueSizeByPriority(priority: MessagePriority) number
    }
    class SchedulerBase {
	    #Logger logger
	    #boolean running
	    #Cache cache
	    #function onMessage
	    +constructor(cache, onMessage)
	    +start() void*
	    +stop() void*
    }
    class Sender {
	    -Logger logger
	    -Map~LinkType, LinkAdapter~ adapters
	    -string sparkProxyUrl
	    +constructor(sparkProxyUrl)
	    +sendMessage(message: Message, linkType: LinkType) Promise~void~
	    +getAvailableLinks() LinkType[]
	    +getLinkQuality(linkType: LinkType) Promise~LinkQuality~
    }
    class FlowControl {
	    -Logger logger
	    -Map~LinkType, LinkQuality~ linkQualities
	    -LinkType selectedLink
	    -SchedulerMode schedulerMode
	    -Sender sender
	    +constructor(sender)
	    +updateLinkQualities() Promise~void~
	    +getSelectedLink() LinkType
	    +setSelectedLink(link: LinkType) void
	    +getSchedulerMode() SchedulerMode
	    +setSchedulerMode(mode: SchedulerMode) void
	    +getLinkQualities() LinkQuality[]
	    -selectBestLink() void
    }
    class Message {
	    +string id
	    +string content
	    +MessagePriority priority
	    +number timestamp
	    +number retries
	    +number maxRetries
    }
    class AgentStatus {
	    +string id
	    +string status
	    +LinkType selectedLink
	    +SchedulerMode schedulerMode
	    +number messagesInQueue
	    +LinkQuality[] linkQualities
	    +number timestamp
    }

    class Configuration {
        <<interface>>
        +SchedulerMode schedulerMode
        +LinkType selectedLink
        +number intervalMs
        +number maxRetries
        +string sparkProxyUrl
        +string token
    }
    class MonitorAdapter {
        -Logger logger
        -string sparkManagerUrl
        -string agentId
        +constructor(sparkManagerUrl, agentId)
        +sendMonitoringData(linkQualities: LinkQuality[]) Promise~void~
        +performSpeedTest(linkType: LinkType) Promise~SpeedTestResult~
        -measureLatency() Promise~number~
        -getSystemMetrics() Promise~object~
    }
    class SpeedTestResult {
        <<interface>>
        +number downloadSpeed
        +number uploadSpeed
        +number latency
        +number packetLoss
    }
	<<abstract>> SchedulerBase
	<<interface>> Message
	<<interface>> AgentStatus
	<<interface>> Configuration
    ApiServer --* SparkAgent : contains
    Receiver --* SparkAgent : contains
    Cache --* SparkAgent : contains
    SchedulerBase --* SparkAgent : contains
    Sender --* SparkAgent : contains
    SparkAgent --* FlowControl : contains
    SparkAgent --* MonitorAdapter : contains
    SparkAgent ..> Message : uses
    SparkAgent ..> Configuration : uses
    SparkAgent ..> AgentStatus : uses
    Cache ..> MessagePriority : uses
    FlowControl ..> LinkType : uses
    FlowControl ..> SchedulerMode : uses
    FlowControl ..> LinkQuality : uses
    MonitorAdapter ..> LinkQuality : uses
    MonitorAdapter ..> SpeedTestResult : uses
    

